add act denerating

--- a/my_tennis_club/members/templates/myfirst.html
+++ b/my_tennis_club/members/templates/myfirst.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 
-<h1>Hello World!</h1>
-<p>Welcome to my first Django project!</p>
+<h1>Это технический сайт, перейдите в админ панель по ссылке!</h1>
+<a href="/admin">Перейдите в админ панель</a>
 
 </body>
 </html>
